# neural_models

./: .gitignore  pyproject.toml  setup.py
neural_models/: probabilistic_population_codes.py
