[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_models"
version = "0.2.0"
authors = [
  { name="J.G. Makin", email="jgmakin@gmail.com" },
]
description="probabilistic population codes and the like in numpy in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "utils-jgm @ git+https://github.com/jgmakin/utils-jgm.git",
]

# [project.urls]
"Homepage" = "https://github.com/jgmakin/neural_models"